# tictactoe-stdb-bevy

./: Cargo.toml  README.md
client/: .env.example  .justfile  Cargo.toml
client/.cargo/: config.toml
client/src/: cell.rs  lib.rs  main.rs
client/src/network/: events.rs  macros.rs  mod.rs  resources.rs  systems.rs
client/src/network/bindings/: create_room_reducer.rs  game_duration_time_schedule_table.rs  game_duration_time_schedule_type.rs  game_state_type.rs  game_table.rs  game_type.rs  join_game_reducer.rs  leave_game_reducer.rs  leave_room_reducer.rs  lobby_room_table.rs  lobby_room_type.rs  mark_cell_reducer.rs  mod.rs  player_type.rs  scheduled_turn_expiration_reducer.rs
client/src/resources/: board_data.rs  fonts.rs  mod.rs
client/src/ui/: mod.rs  systems.rs
server/: Cargo.toml
server/src/: game_table.rs  game_turn_scheduler.rs  lib.rs  lobby_room_table.rs  types.rs
src/: board_data.rs  colors.rs  lib.rs  main.rs  tile.rs  ui.rs
