[package]
name = "tic-tac-toe"
version = "0.1.0"
edition = "2024"

[dependencies]

[dependencies.bevy]
version = "0.15.3"
default-features = false
features = ["bevy_sprite", "bevy_state", "bevy_winit"]

[target.x86_64-unknown-linux-gnu.dependencies.bevy]
version = "0.15.3"
default-features = false
features = ["dynamic_linking", "wayland"]

[target.wasm32-unknown-unknown.dependencies.bevy]
version = "0.15.3"
default-features = false
features = ["webgl2"]

[target.wasm32-unknown-unknown.dependencies.bevy_ecs]
version = "0.15.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
strip = "symbols" # "symbols" | "debuginfo"
opt-level = "s"
codegen-units = 1

[profile.reldebug]
inherits = "release"
strip = "none"
