[package]
name = "tic-tac-toe"
version = "0.1.0"
edition = "2024"

# Release builds with `cargo b --release --no-default-features -F bevy_static`
[features]
default = ["bevy_dynamic"]
bevy_dynamic = ["bevy/dynamic_linking"]
bevy_static = []

[dependencies]
bevy = { version = "0.15.3", default-features = false, features = [
    "bevy_sprite", "bevy_state", "bevy_winit", "bevy_ui"
] }
crossbeam-channel = "0.5.15"
paste = "1.0.15"
spacetimedb-sdk = { git = "https://github.com/thlsrms/SpacetimeDB", rev = "426a2d9d95920202605d9a2fe" }

[target.x86_64-unknown-linux-gnu.dependencies]
bevy = { version = "0.15.3", default-features = false, features = ["wayland"] }

[target.wasm32-unknown-unknown.dependencies]
bevy = { version = "0.15.3", default-features = false, features = ["webgl2"] }
bevy_ecs = "0.15.3"
gloo-console = "0.3.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
strip = "symbols" # "symbols" | "debuginfo"
opt-level = "s"
codegen-units = 1

[profile.reldebug]
inherits = "release"
strip = "none"
